Fix overflow on details text

--- a/src/WeddingSite.Web/wwwroot/css/site.css
+++ b/src/WeddingSite.Web/wwwroot/css/site.css
@@ -128,3 +128,7 @@ body {
 .add-another-rsvp-row {
   margin: 1em;
 }
+
+#details-paragraph {
+  padding: 1em;
+}
